FIXED: Navigation Tablet View Responsiveness

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -438,3 +438,22 @@ table.sortable tbody tr:nth-child(2n+1) td {
     height: 40px;
 }
 
+@media screen and (max-width: 992px) {
+    .navbar-brand{
+        display: none;
+    }
+    nav .container{
+        width: 100% !important;
+    }
+
+}
+
+@media screen and (max-width: 762px) {
+    .navbar-brand{
+        display: inline;
+    }
+    nav .container{
+        width: 100% !important;
+    }
+
+}
